--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="logo.jpeg" alt="Logo">
+        <img class="logo" src="logo.jpeg" alt="Logo">
         <h1 class="title">Murray's Website</h1>
     </div>
 </body>
