--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="header">
         <img class="logo" src="logo.jpeg" alt="Logo">
+        <div style="clear: both;"></div>
         <h1 class="title">Murray's Website</h1>
     </div>
 </body>
