--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <div style="clear: both;"></div>
         <h1 class="title">Murray's Website</h1>
     </div>
+    <div class="header-transition"></div>
 </body>
 </html>
